tests/baselines/reference/project/noDefaultLib/amd/noDefaultLib.errors.txt
error TS2318: Cannot find global type 'Object'.
error TS2318: Cannot find global type 'Array'.
error TS2318: Cannot find global type 'ParameterDecorator'.
error TS2318: Cannot find global type 'ClassDecorator'.
error TS2318: Cannot find global type 'TypedPropertyDescriptor'.
error TS2318: Cannot find global type 'String'.
error TS2318: Cannot find global type 'RegExp'.
error TS2318: Cannot find global type 'PropertyDecorator'.
error TS2318: Cannot find global type 'Function'.
error TS2318: Cannot find global type 'Boolean'.
error TS2318: Cannot find global type 'Number'.
error TS2318: Cannot find global type 'IArguments'.
test.ts(3,8): error TS2304: Cannot find name 'Array'.


!!! error TS2318: Cannot find global type 'Object'.
!!! error TS2318: Cannot find global type 'Array'.
!!! error TS2318: Cannot find global type 'ParameterDecorator'.
!!! error TS2318: Cannot find global type 'ClassDecorator'.
!!! error TS2318: Cannot find global type 'TypedPropertyDescriptor'.
!!! error TS2318: Cannot find global type 'String'.
!!! error TS2318: Cannot find global type 'RegExp'.
!!! error TS2318: Cannot find global type 'PropertyDecorator'.
!!! error TS2318: Cannot find global type 'Function'.
!!! error TS2318: Cannot find global type 'Boolean'.
!!! error TS2318: Cannot find global type 'Number'.
!!! error TS2318: Cannot find global type 'IArguments'.
==== test.ts (1 errors) ====
    /// <reference no-default-lib="true"/>
    
    var x: Array<number>;
           ~~~~~
!!! error TS2304: Cannot find name 'Array'.
    
    